# friendly_data_registry

./: .gitignore  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: add-value-index-column-to-registry.md
.github/workflows/: pythonpackage.yml
dev/: README.md  tag_release.bash
friendly_data_registry/: __init__.py
friendly_data_registry/cols/: carrier_con.json  carrier_prod.json  cost_depreciation_rate.json  cost_lifetime.yaml  cost_om_con.json  cost_om_prod.json  description.json  energy_cap.json  energy_cap_max_systemwide.json  energy_cap_per_storage_cap_max.json  energy_capacity.json  energy_in.yaml  energy_out.yaml  energy_ramping.json  flow_in.yaml  flow_out.yaml  lifetime.json  loc_coordinates.json  name.json  nameplate_capacity.yaml  resource.json  resource_area.json  resource_cap.json  resource_eff.json  storage.json  storage_cap.json  storage_capacity.json  storage_capacity.yaml  storage_loss.json  systemwide_levelised_cost.json  value.json
friendly_data_registry/idxcols/: carrier.json  coordinates.json  model.json  region.yaml  scenario.json  technology.yaml  timestep.json  unit.yaml  variable.yaml  year.json
sark_registry/: __init__.py  __main__.py
sark_registry/cols/: capacity_factor.json  colors.json  cost.json  cost_energy_cap.json  cost_investment.json  cost_resource_area.json  cost_resource_cap.json  cost_storage_cap.json  cost_var.json  energy_cap_max.json  energy_eff.json  force_resource.json  inheritance.json  names.json  parasitic_eff.json  resource_area_max.json  resource_con.json  resource_unit.json  storage_cap_max.json  systemwide_capacity_factor.json  total_levelised_cost.json
sark_registry/idxcols/: carriers.json  costs.json  locs.json  techs.json  timesteps.json
tests/: test_registry.py
